--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -21,6 +21,7 @@ svg {
           <label for="ss_all">Show all molecules</label>
           {% if is_ready %}
           <h2 class="h4 mt-3 mx-2">Frequent substructures</h2>
+	        {% if substructures %}
           <ul class="list-unstyled text-center">
             {% for substructure in substructures %}
             <li>
@@ -32,6 +33,9 @@ svg {
             </li>
             {% endfor %}
           </ul>
+	        {% else %}
+          <p class="mt-3">No frequent substructure was found.</p>
+	        {% endif %}
           {% else %}
           <p class="mt-3">Substructure analysis is not ready. Please wait a while and refresh later.</p>
           {% endif %}
@@ -44,7 +48,8 @@ svg {
               <span v-if="loading">Loading...</span>
               <span v-else>Please choose a substructure from the left column</span>
             </span>
-            <div class="row container-fluid" v-if="!loading">
+            <div class="row container-fluid mt-4" v-if="!loading">
+	            <p>Showing [[ molecules.length ]] molecules </p>
               <div class="col-12 col-md-6 col-lg-4 border" v-for="molecule in molecules" :key="molecule.smiles">
                 <div>
                   <input type="checkbox" v-model="checked_molecules" :value="molecule.smiles" :id="molecule.name">
